# Airglow

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc.yaml  Airglow.js  Airglow.json  Airglow.ps1  CMakeLists.txt  CMakePresets.json  Gooey.cpp  Gooey.rc  LICENSE.md  LICENSE.rtf  README.md  Resource.h  app.manifest  bundle-exe-msi.wxs  bundle.wxs  ci.ps1  config.hxx  db.cxx  deno.json  eslint.config.js  go.mod  go.ps1  gooey.manifest  gooey.rc  gooey_debug.rc  gooey_release.rc  install.ps1  install.wxs  installer.wxs  ipmo.ps1  msi.wxs  notes  notes.cpp  (+24 more)
.config/: dotnet-tools.json
.github/workflows/: airglow.yaml  build.yaml  build.yml
.whittledown/previous/1.5.0/: App.cxx  App.hxx  Storage.cxx  Storage.hxx
Airglow/: Airglow.cxx  App.cxx  App.hxx  Browser.cxx  Browser.hxx  CMakeLists.txt  Main.cxx  PCH.cxx  PCH.hxx  Storage.cxx  Storage.hxx  Utility.cxx  Utility.hxx  WebView.cxx  webview.cxx  webview.hxx
Airglow/airglow/: addressbar.cxx  addressbar.hxx  airglow.cxx  airglow.hxx  app.cxx  app.hxx  browser.cxx  browser.hxx  definitions.hxx  frame.cxx  global.hxx  main.cxx  messagewindow.cxx  messagewindow.hxx  server.hxx  settings.cxx  settings.hxx  settingsbrowser.cxx  settingsbrowser.hxx  settingswindow.cxx  settingswindow.hxx  url.cxx  url.hxx  webview.cxx  webview.hxx  window.cxx  window.hxx
Airglow/gui/: package.json  pnpm-lock.yaml  prettier.config.cjs  vite.config.ts
Airglow/gui/src/: app.tsx  index.tsx  vite-env.d.ts
Airglow/gui/src/bar/: app.tsx
Airglow/gui/src/frame/: index.css  index.html  index.tsx
Airglow/gui/src/settings/: app.tsx
Airglow/gui/src/tabs/: app.tsx  index.css  tabs.tsx
Airglow/src/: AddressBar.cxx  AddressBar.hxx  Airglow.cxx  Airglow.hxx  App.cxx  App.hxx  Browser.cxx  Browser.hxx  Enums.hxx  Frame.cxx  Frame.hxx  Main.cxx  Settings.cxx  Settings.hxx  SettingsWindow.cxx  SettingsWindow.hxx  WebViews.hxx  airglow.cxx  webview.hxx
CMake/: Configure.cmake  ReadJSON.cmake
cmake/: Data.cmake  PackageInfo.cmake  resource.cmake  resources.cmake
config/: AirglowConfig.h.in  airglow.hxx.in
data/: LICENSE.rtf  airglow.manifest  app.manifest  debug.rc  ico.ps1  icon.ps1  release.rc  test.mkv
frontend/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  index.css
gui/: .prettierrc.yaml  Airglow.js  addressbar.html  addressbar.tsx  app.tsx  flexoki.ts  global.d.ts  index.css  index.html  index.tsx  package.json  pnpm-lock.yaml  postcss.config.cjs  prettier.config.cjs  prettier.config.js  settings.html  settings.tsx  tabs.tsx  tailwind.config.ts  tsconfig.json  vite-env.d.ts  vite.config.ts
gui/apps/addressbar/: App.tsx
gui/apps/home/: App.tsx  index.html  index.tsx
gui/apps/settings/: App.tsx  index.html  index.tsx
gui/apps/template/: App.tsx  index.html
gui/apps/test/: App.tsx  index.html  index.tsx  test.css
gui/apps/url/: App.tsx  index.html  index.tsx
gui/components/: Button.tsx  Text.tsx  button.tsx  text.tsx
gui/css/: home.css  index.css  test.css
gui/lib/: main.ts  url.ts
gui/libs/: common.ts  index.ts  main.ts  response.ts  storage.ts  tests.ts  types.ts  url.ts  webview.ts
gui/public/: inject.js
gui/settings/: index.html  index.tsx  tabs.tsx
gui/src/: app.css  app.tsx  appbackup.tsx  backup.tsx  index.css  index.html  index.tsx
gui/src/bar/: app.css  (+3 more)
gui/template/: index.tsx
gui/tests/: url.ts
js/: inject.js
modules/: actions.ts  tasks.ts
next/: CMakeLists.txt  Main.cxx
next/cmake/: icon.cmake
next/gui/: tailwind.config.ts
next/src/: Main.cxx  airglow.cxx  app.cxx  app.hxx  settings.cxx  settings.hxx  webview.cxx  webview.hxx
notes/: webview_scripts.cxx
previous/: CMakeLists.txt  Definitions.hxx  Main.hpp  Settings.hpp  Utility.cxx  WebView.cxx
previous/1.5.0/: PCH.hxx  Templates.hxx  Utility.hxx  WebView.hxx
previous/1.5.0/gui/: tsconfig.json  vite.config.ts
previous/1.5.0/gui/src/tabs/: index.css  index.html  index.tsx
previous/2.0.0a/: addressbar.hxx  app.cxx  browser.cxx  browser.hxx  frame.hxx  mainwindow.hxx  settingswindow.cxx  settingswindow.hxx
previous/done/: State.hpp  WebView.hpp
previous/gui/src/frame/: app.tsx
previous/gui/src/settings/: app.tsx  index.html
previous/gui/src/tabs/: app.tsx
process/: main.cxx
scripts/: debug.ps1  export.ps1  gh_release.ps1  libs.ps1  packages.ps1  release.ps1  test.ps1
scripts/dev/: dev.psm1
server/: server.go
settings/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
settings/src/: app.css  app.tsx
snippets/: Shutdown.hpp  Startup.hpp
src/: Airglow.cpp  Airglow.cxx  Airglow.hpp  Airglow.hxx  App.cxx  App.hpp  App.hxx  Browser.cxx  Browser.hxx  Config.cxx  Config.hxx  Console.cxx  Data.hxx  Database.cxx  Database.hxx  Debug.hpp  Definitions.hxx  Gooey.cpp  Gooey.hpp  Gooey1.cpp  JSON.cxx  JSON.hxx  Key.hpp  Main.cpp  Main.cxx  Main.hpp  MainWindow.cpp  MainWindow.cxx  MainWindow.hpp  MainWindow.hxx  Messages.hpp  PCH.cxx  PCH.hxx  Settings.cxx  Settings.hpp  Settings.hxx  State.cxx  State.hpp  State.hxx  Storage.cxx  (+40 more)
src/console/: Main.cxx
src/include/: Definitions.hxx  PCH.hxx  Templates.hxx
src/test/: Test.cxx
src/tests/: Tests.cxx
tools/: build_debug.ps1  build_release.ps1  build_server.ps1  changes.ps1  clean.ps1  clean_appdata.ps1  clean_build.ps1  clean_node.ps1  compile_commands_debug.ps1  compile_commands_release.ps1  debug.ps1  debug_graphviz.ps1  dev_install.ps1  export.ps1  gen_debug.ps1  gen_release.ps1  generateManifest.ts  gh_release.ps1  graphviz.ps1  icons.ps1  install.ps1  installer.ps1  installer.wxs  libs.ps1  manifest.ts  module.ps1  notes.ps1  old_installer.ps1  original-install.ps1  packages.ps1  release_graphviz.ps1  test.ps1  update_cppwinrt.ps1  update_webview.ps1  update_wil.ps1  watch.ps1  watch.ts  watcher.ts  x64.ps1  x86.ps1
tools/PowerShell/: PowerShell.psm1
tools/dev/: dev.psm1
tools/installer/: bundle.wxs  msi.wxs
tools/scripts/: manifest.ts  test.ps1
tools/server/: server.go
(+4 files in other folders)
